Updated recipes and index file

--- a/Recipes/pesto-pizza.html
+++ b/Recipes/pesto-pizza.html
@@ -2,7 +2,7 @@
   <h1 id="header">Pesto Pizza</h1>
   <p>A great alternative to your regular pizza.</p>
   <img
-    src="/Images/PestoPizza.jpg"
+    src="Images/PestoPizza.jpg"
     alt="Pesto Pizza"
     style="width: 600px; height: 400px"
   />
