--- a/Recipes/hummus-pizza.html
+++ b/Recipes/hummus-pizza.html
@@ -6,7 +6,7 @@
     and cheese.
   </p>
   <img
-    src="/Images/HummusPizza.jpg"
+    src="Images/HummusPizza.jpg"
     alt="Hummus Pizza"
     style="width: 600px; height: 400px"
   />
