Updated path and renamed images

--- a/Recipes/hummus-pizza.html
+++ b/Recipes/hummus-pizza.html
@@ -6,7 +6,7 @@
     and cheese.
   </p>
   <img
-    src="/images/PestoPizza.jpg"
+    src="/images/hummus-pizza.jpg"
     alt="Hummus Pizza"
     style="width: 600px; height: 400px"
   />
