--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <body>
     <h1 id="header">Pizza</h1>
     <img
-      src="images/illustration-hands-slices-pizza-different-flavors-vector-banner-fast-food-thin-line-flat-design-invitation-t-106411947.jpg"
+      src="images/illustration-slices.jpg"
       alt="Hands slices pizza"
       style="width: 600px; height: 400px"
     />
     <img
-      src="images/pizza-set-different-menu-wooden-background-use-design-poster-flyer-banner-172538528.jpg"
+      src="images/pizza-set.jpg"
       alt="Pizza set"
       style="width: 600px; height: 400px"
     />
@@ -27,7 +27,7 @@
     </p>
     <h3>Varieties and styles</h3>
     <img
-      src="images/big-collection-different-pizza-top-view-ingredients-big-collection-different-pizza-top-view-ingredients-italian-186381143.jpg"
+      src="images/pizza-collection.jpg"
       alt="Collection of different types of pizzas"
       style="width: 800px; height: 400px"
     />
