--- a/Recipes/margherita-pizza.html
+++ b/Recipes/margherita-pizza.html
@@ -5,7 +5,7 @@
     tomato sauce, mozzarella, and basil, with just a hint of sea salt.
   </p>
   <img
-    src="/images/AuthenticPizzaMargherita.png"
+    src="/images/margherita.png"
     alt="Margherita Pizza"
     style="width: 600px; height: 400px"
   />
